favicion meta tags

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -1,9 +1,12 @@
 <!doctype html>
-<html lang="en" data-theme="light">
+<html lang="en" data-theme="dark">
 <head>
   <meta charset="utf-8">
-  <title>SpaceflightNewsSolvro</title>
+  <title>Spaceflight News Solvro</title>
   <base href="/">
+  <meta name="description" content="Spaceflight news - solvro recruitment task">
+  <meta name="keywords" content="Spaceflight, news, nasa, spacex, space">
+  <meta name="author" content="Jakub Radzik">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
